--- a/15.Css-Grid/style.css
+++ b/15.Css-Grid/style.css
@@ -48,32 +48,21 @@
 .boxx:nth-child(1){
     grid-column: 1/13;
 }
-.boxx:nth-child(2){
-    grid-column: 1/7;
-}
+.boxx:nth-child(2),
 .boxx:nth-child(3){
-    grid-column: 7/13;
+    grid-column: span 6;
 }
-.boxx:nth-child(4){
-    grid-column: 1/5;
-}
-.boxx:nth-child(5){
-    grid-column: 5/9;
-}
+
+.boxx:nth-child(4),
+.boxx:nth-child(5),
 .boxx:nth-child(6){
-    grid-column: 9/13;
+    grid-column: span 4;
 }
-.boxx:nth-child(7){
-    grid-column: 1/4;
-}
-.boxx:nth-child(8){
-    grid-column: 4/7;
-}
-.boxx:nth-child(9){
-    grid-column: 7/10;
-}
+.boxx:nth-child(7),
+.boxx:nth-child(8),
+.boxx:nth-child(9),
 .boxx:nth-child(10){
-    grid-column: 10/13;
+    grid-column: span 3;
 }
 .boxx:nth-child(11),
 .boxx:nth-child(12),
