--- a/16.Responsive-Furniture-website/style.css
+++ b/16.Responsive-Furniture-website/style.css
@@ -1,52 +1,114 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.section{
-    background-image: url("./image\ 3.svg");
-    height: 100vh;
-    background-size: cover;
+.section {
+  background-image: url("./image\ 3.svg");
+  height: 100vh;
+  background-size: cover;
 }
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .header nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+.header nav ul li a {
+  color: white;
+}
+.main {
+  /* width: 60%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.make {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 30px;
+  color: white;
+  margin: 100px;
+  width: 50%;
+}
+h1 {
+  font-size: 35px;
+}
+.input input {
+  width: 400px;
+  padding: 10px;
+  border-radius: 50px;
+  border: none;
+  opacity: 0.5;
+  color: white;
+}
+.input {
+  position: relative;
+}
+.input i {
+  position: absolute;
+  border-radius: 50%;
+  background-color: white;
+  padding: 5px;
+  right: 10px;
+  top: 5px;
+  color: rgb(114, 86, 45);
+}
+.why {
+  height: 50vh;
+}
+.class {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  padding: 20px;
+}
+.class div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+}
+.class .div {
+  border: 1px solid red;
+}
+.class div i {
+  border-radius: 50%;
+  background-color: rgb(185, 183, 183);
+  padding: 10px;
+}
+.class div a {
+  color: red;
+}
+.footer {
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 30px;
+  padding: 20px;
+}
+.footer div {
+  display: flex;
 
+  flex-direction: column;
+  gap: 20px;
 }
-.header nav ul li a{
-   color: white;
-}
-.main{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    
-}
-.make{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 30px;
-    color: white;
-    flex-wrap: wrap;
-    margin: 100px;
-    
-}
-h1{
-    font-size: 30px;
+.footer div nav ul li a {
+  color: white;
 }
