--- a/16.Responsive-Furniture-website/style.css
+++ b/16.Responsive-Furniture-website/style.css
@@ -28,6 +28,9 @@
 .header nav ul li a {
   color: white;
 }
+.header i {
+  display: none;
+}
 .main {
   /* width: 60%; */
   display: flex;
@@ -53,8 +56,8 @@ h1 {
   border-radius: 50px;
   border: none;
   opacity: 0.5;
-  color: white;
 }
+
 .input {
   position: relative;
 }
@@ -67,9 +70,6 @@ h1 {
   top: 5px;
   color: rgb(114, 86, 45);
 }
-.why {
-  height: 50vh;
-}
 .class {
   display: flex;
   align-items: center;
@@ -79,29 +79,36 @@ h1 {
 }
 .class div {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
   gap: 10px;
 }
+.class div img {
+  width: 20%;
+}
+h5 {
+  color: rgb(58, 57, 57);
+}
+.class div p {
+  font-size: 10px;
+}
 .class .div {
-  border: 1px solid red;
+  box-shadow: 2px 2px 5px red;
 }
 .class div i {
   border-radius: 50%;
-  background-color: rgb(185, 183, 183);
+  background-color: rgb(250, 204, 204);
   padding: 10px;
 }
 .class div a {
-  color: red;
+  color: rgb(248, 167, 167);
 }
 .footer {
   background-color: black;
   display: flex;
-  align-items: center;
+
   justify-content: space-around;
-  gap: 30px;
-  padding: 20px;
+  gap: 50px;
+  padding: 30px;
 }
 .footer div {
   display: flex;
@@ -111,4 +118,6 @@ h1 {
 }
 .footer div nav ul li a {
   color: white;
+  font-size: 12px;
 }
+
