--- a/16.Responsive-Furniture-website/style.css
+++ b/16.Responsive-Furniture-website/style.css
@@ -30,6 +30,7 @@
 }
 .header i {
   display: none;
+  color: white;
 }
 .main {
   /* width: 60%; */
@@ -47,8 +48,9 @@
   margin: 100px;
   width: 50%;
 }
-h1 {
+.make h1 {
   font-size: 35px;
+  text-align: center;
 }
 .input input {
   width: 400px;
@@ -81,6 +83,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding: 10px;
 }
 .class div img {
   width: 20%;
@@ -92,11 +95,16 @@ h5 {
   font-size: 10px;
 }
 .class .div {
-  box-shadow: 2px 2px 5px red;
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px #f79489;
+}
+.class div:hover {
+  box-shadow: 2px 2px 10px #f79489;
 }
 .class div i {
   border-radius: 50%;
-  background-color: rgb(250, 204, 204);
+  background-color: rgb(250, 204, 204, 0.2);
+
   padding: 10px;
 }
 .class div a {
@@ -114,10 +122,27 @@ h5 {
   display: flex;
 
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 .footer div nav ul li a {
   color: white;
   font-size: 12px;
 }
+.footer div h5 {
+  color: #fadcd9;
+}
+@media screen and (max-width: 767px) {
+  .link {
+    display: none;
+  }
+  .header .img img{
+     display: none;
+  }
+  .header .img i{
+    display: flex;
+  }
+   .class{
+    flex-wrap: wrap;
+   }
 
+}
