--- a/19.Scss-ProjectHome/assets/sass/pages/_home.scss
+++ b/19.Scss-ProjectHome/assets/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 section {
-  background-image: url("./images/background.svg");
+  background-image: url("../images/background.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
