--- a/19.Scss-ProjectHome/assets/sass/main.css
+++ b/19.Scss-ProjectHome/assets/sass/main.css
@@ -1,1 +1,225 @@
-/*# sourceMappingURL=main.css.map */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-decoration: none;
+  list-style: none;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+h1 {
+  font-size: 58px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0;
+}
+
+button {
+  padding: 10px 36px;
+  border-radius: 37px;
+}
+
+.get {
+  background-color: #784f33;
+  color: white;
+  border: none;
+}
+
+.learn {
+  background-color: transparent;
+  color: #784f33;
+  border: 2px solid #784f33;
+}
+
+header .header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #252b42;
+}
+header .header h3 {
+  color: #252b42;
+}
+header .header nav ul {
+  display: flex;
+  gap: 30px;
+}
+header .header nav ul li a {
+  color: #737373;
+}
+
+section {
+  background-image: url("../images/background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+section main {
+  margin: 100px;
+}
+section main .section .up {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 50%;
+}
+section main .section .up h1 {
+  color: #252b42;
+}
+section main .section .up h4 {
+  color: #737373;
+}
+section main .section down {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+section main .section down .box {
+  width: 30%;
+  padding: 10px;
+}
+section main .section down .box .box1 {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}/*# sourceMappingURL=main.css.map */
