--- a/19.Scss-ProjectHome/assets/sass/pages/_home.scss
+++ b/19.Scss-ProjectHome/assets/sass/pages/_home.scss
@@ -3,4 +3,37 @@ section {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  height: 100vh;
+  main {
+    margin: 100px;
+    .section {
+      .up {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        width: 50%;
+        h1 {
+          color: #252b42;
+        }
+        h4 {
+          color: #737373;
+        }
+      }
+      down {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        .box {
+          width: 30%;
+          padding: 10px;
+          .box1 {
+            display: flex;
+            flex-direction: column;
+            background-color: white;
+          }
+        }
+      }
+    }
+  }
 }
